syntax = "proto3";

package protograph.schema;

message TransformMessage {
  string label = 1;
  string role = 2;
  string gid = 3;
  repeated FieldAction actions = 4;
}

message FieldAction {
  string field = 1;
  oneof action {
    EdgeDescription remote_edges = 2;
    EdgeDescription link_through = 3;
    EdgeDescription edge_source = 4;
    EdgeDescription edge_terminal = 5;
    EdgeDescription embedded_terminals = 6;
    RenameProperty rename_property = 9;
    SerializeField serialize_field = 10;
    SpliceMap splice_map = 11;
    InnerVertex inner_vertex = 12;
    JoinList join_list = 13;
    StoreField store_field = 14;
  }
}

message EdgeDescription {
  string edge_label = 1;
  string destination_label = 2;
  string embedded_in = 3;
  repeated string lift_fields = 4;
}

message RenameProperty {
  string rename = 1;
}

message SerializeField {
  string serialized_name = 1;
}

message SpliceMap {
  string prefix = 1;
}

message InnerVertex {
  string edge_label = 1;
  string destination_label = 2;
  string outer_id = 3;
}

message JoinList {
  string delimiter = 1;
}

message StoreField {
  bool store = 1;
}

